<resources>
    <string name="app_name">柒宝商家</string>
    <string name="home_page">首页</string>
    <string name="wallet">钱包</string>
    <string name="avatar_set">头像设置</string>
    <string name="current_mouth_order">本月已产生订单</string>
    <string name="wait_receive_order">待接单</string>
    <string name="goods_publish">商品发布</string>
    <string name="my_goods">我的商品</string>
    <string name="ship_setting">配送设置</string>
    <string name="store_manage">商铺管理</string>
    <string name="accout_safe">账户安全</string>
    <string name="system_setting">系统设置</string>
    <string name="goods_manage">商品管理</string>
    <string name="add_category">添加分类</string>
    <string name="edit_category">编辑分类</string>
    <string name="add_upload_goods">+ 上传商品</string>
    <string name="add_goods">添加商品</string>
    <string name="edit_goods">商品编辑</string>
    <string name="my_invite_code">我的邀请二维码</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_receive_goods">待收货</string>
    <string name="has_cancel">已取消</string>
    <string name="order_list">订单列表</string>
    <string name="modify_login_password">修改登录密码</string>
    <string name="modify_pay_password">修改支付密码</string>
    <string name="forget_pay_password">忘记支付密码</string>
    <string name="app_version_descripe">APP版本说明</string>
    <string name="about_wangwang_life">关于柒宝商家</string>
    <string name="contact_us">联系我们</string>
    <string name="exit_login">退出登录</string>
    <string name="click_withdraw">点击提现</string>
    <string name="withdraw">提现</string>
    <string name="check_withdraw_des">查看提现明细</string>
    <string name="check_bank">查看银行卡</string>
    <string name="bank_card">银行卡</string>
    <string name="count_name_with_colon">账户名称:</string>
    <string name="choose_bank_with_colon">选择银行:</string>
    <string name="bank_number_with_colon">银行账号:</string>
    <string name="opening_bank_with_colon">开户行名称:</string>
    <string name="submit">提交</string>
    <string name="tixian_des">提现明细</string>
    <string name="xiaoshoue">销售额</string>
    <string name="remaining_des">余额明细</string>
    <string name="yujiesuan_des">待收货款明细</string>
    <string name="money_sum">金额</string>
    <string name="remark">备注</string>
    <string name="time">时间</string>
    <string name="state">状态</string>
    <string name="type">类型</string>
    <string name="order_number">订单号</string>
    <string name="date">日期</string>
    <string name="vip">会员</string>
    <string name="choice_time">选择时间</string>
    <string name="bank_manage">银行卡管理</string>
    <string name="add_bank">添加银行卡</string>
    <string name="save">保存</string>
    <string name="store_info">店铺信息</string>
    <string name="store_res">店铺资质</string>
    <string name="renew">续费</string>
    <string name="renew_service">续费服务</string>
    <string name="system_news">系统消息</string>
    <string name="at_store">到店</string>
    <string name="delivery">配送</string>
    <string name="hint_at_store">提示:选择到店，会员下单后需要到店铺来取货!</string>
    <string name="hint_delivery">提示:免费配送，设置金额为0即可</string>
    <string name="delivery_setting">配送设置</string>
    <string name="yuan">元</string>
    <string name="delivery_fee_with_colon">配送费: </string>
    <string name="free_delivery_fee_with_colon">满免配送费: </string>
    <string name="packaging_fee_with_colon">包装费: </string>
    <string name="free_packaging_fee_with_colon">满免包装费: </string>
    <string name="input_fee_amount">输入费用金额</string>
    <string name="input_packaging_fee_amount">输入包装费金额</string>
    <string name="input_need_over_amount">输入需满金额</string>
    <string name="goods_bar_code_with_colon">商品条形码 :</string>
    <string name="goods_name_with_colon">商品名称 :</string>
    <string name="goods_price_with_colon">商品价格 :</string>
    <string name="stock_count_with_colon">库存数量 :</string>
    <string name="goods_classify_with_colon">商品分类 :</string>
    <string name="has_sole_with_colon">已销售 :</string>
    <string name="goods_description_with_colon">商品描述 :</string>
    <string name="confirm">确认</string>
    <string name="username_whit_colon">账号:</string>
    <string name="please_input_username">请输入您的账号</string>
    <string name="please_input_password">请输入您的密码</string>
    <string name="password_whit_colon">密码:</string>
    <string name="login">登录</string>
    <string name="business_register">商家注册</string>
    <string name="forget_psw">忘记密码?</string>
    <string name="business_login">商家登录</string>
    <string name="phone_number_whit_colon">手机号</string>
    <string name="please_input_phone_number">请输入您的手机号</string>
    <string name="verification_code_whit_colon">验证码:</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="send_ready">已发送,请稍等</string>
    <string name="sec">秒</string>
    <string name="find_login_password">找回登录密码</string>
    <string name="phone_num_error">电话号码不正确</string>
    <string name="code_input_error">请输入正确的验证码</string>
    <string name="new_passwrod_with_colon">新密码:</string>
    <string name="old_passwrod_with_colon">旧密码:</string>
    <string name="input_new_passwrod">请输入新密码</string>
    <string name="please_now_psw">请输入当前密码</string>
    <string name="make_sure_passwrod_with_colon">确认密码:</string>
    <string name="input_new_passwrod_again">请再次输入密码</string>
    <string name="finish">完成</string>
    <string name="closed">已关闭</string>
    <string name="psw_input_not_same">两次输入密码不一致</string>
    <string name="input_password_limit">6-20位字母和数字组合</string>
    <string name="recommend_code">推荐码</string>
    <string name="input_recommend_code">请输入推荐码</string>
    <string name="register_tips">注册表示您同意</string>
    <string name="server_protocol">《商家软件许可服务协议》</string>
    <string name="register_info">请填写注册资料</string>
    <string name="psw_input_error">密码输入不正确</string>
    <string name="base_info">基本资料</string>
    <string name="commit_info">提交资料</string>
    <string name="server_money">开通服务费</string>
    <string name="check">审核</string>
    <string name="click_updata_photo">点击上传</string>
    <string name="add_category_with_add">添加分类  +</string>
    <string name="shop_name_with_colon">店铺名称:</string>
    <string name="shop_phone_input">请输入您的店铺电话</string>
    <string name="men_pai_hao_with_colon">门牌号:</string>
    <string name="click_location">点击定位</string>
    <string name="shop_name_hint">请输入店铺名称</string>
    <string name="shop_address_with_colon">店铺地址:</string>
    <string name="shop_trade_hint">请选择行业</string>
    <string name="shop_phone_with_colon">店铺电话:</string>
    <string name="shop_declare_with_colon">店铺说明:</string>
    <string name="business_time_with_colon">营业时间:</string>
    <string name="legal_name">法人姓名:</string>
    <string name="input_real_name">请输入真实姓名</string>
    <string name="legal_identity_card">法人身份证:</string>
    <string name="input_legal_identity_card_num">请输入真实有效的证件号码</string>
    <string name="legal_company_name">公司名称:</string>
    <string name="input_legal_company_name">请输入营业执照公司名称</string>
    <string name="business_num">营业执照号码:</string>
    <string name="input_business_num">请输入您的营业执照号码</string>
    <string name="shen_fen_zhen_zhen_mian">身份证正面</string>
    <string name="shen_fen_zhen_fan_mian">身份证反面</string>
    <string name="ying_ye_zhen">营业执照图片</string>
    <string name="men_dian">门店正面图片</string>
    <string name="commit_tips">提示:请保持照片清晰,能看到证件号码及有效日期</string>
    <string name="open_ww_server">开通商家店铺服务</string>
    <string name="pay_way">选择支付方式</string>
    <string name="wechat_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="fail_reason">很抱歉!您的店铺资料审核没有通过</string>
    <string name="fail_reason_try_again">请您重新填写提交</string>
    <string name="check_reason">您的店铺资料已经提交成功,后台将在2-3个工作日内审核完成</string>
    <string name="pass_reason">恭喜您!您的店铺资料已经审核通过赶快进行下一步操作吧!</string>
    <string name="input_again">重新填写</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem.
		You may need to restart the device.</string>
    <string name="all_picture">所有图片</string>
    <string name="zhang">张</string>
    <string name="take_picture">拍摄照片</string>
    <string name="folder_all">所有图片</string>
    <string name="msg_no_camera">没有找到系统相机!</string>
    <string name="msg_amount_limit">选择图片数量超过限制!</string>
    <string name="images">图片</string>
    <string name="preview">预览</string>
    <string name="delete">删除</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="psw_not_empty">密码不能为空</string>
    <string name="old_psw_not_empty">旧密码不能为空</string>
    <string name="please_add_edit_category_name">请添加编辑分类名称</string>
    <string name="store_rank_with_colon">店铺等级:</string>
    <string name="skill_point_with_colon">商家配比:</string>
    <string name="stop_do_business">停止营业</string>
    <string name="start_do_business">开始营业</string>
    <string name="save_info">保存信息</string>
    <string name="send_success">发送成功</string>
    <string name="select_trade">选择行业类型:</string>
    <string name="shop_name_not_empty">店铺名称不能为空</string>
    <string name="shop_phone_error">店铺电话不正确</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="download_right_now">立即下载</string>
    <string name="downloading">正在下载...</string>
    <string name="check_code_null">验证码不为空</string>
    <string name="have_not_choice_file">没有选择文件</string>
    <string name="pic_not_all">请补全要上传的图片</string>
    <string name="order_details">订单详情</string>
    <string name="order_account_with_colon">订单账号:</string>
    <string name="state_with_colon">状态:</string>
    <string name="order_number_with_colon">订单号:</string>
    <string name="pay_way_with_colon">支付方式:</string>
    <string name="pay_time_with_colon">支付时间:</string>
    <string name="receive_people_with_colon">收货人:</string>
    <string name="phone_with_colon">电话:</string>
    <string name="address_with_colon">地址:</string>
    <string name="send_time_with_colon">送达时间:</string>
    <string name="ship_manul_with_colon">配送说明:</string>
    <string name="total_with_colon">合计:</string>
    <string name="pay_with_colon">支付:</string>
    <string name="money_totalize">金额总计:</string>
    <string name="confirm_order">确认接单</string>
    <string name="real_certificate">实名认证</string>
    <string name="open_service">开通服务</string>
    <string name="licencename_with_colon">营业执照名称 :</string>
    <string name="shopkeeper_name_with_colon">店主姓名 :</string>
    <string name="shopkeeper_idcard_number_with_colon">店主证件号码 :</string>
    <string name="business_license_number_with_colon">营业执照号码 :</string>
    <string name="hint_idcard_picture">身份证图片</string>
    <string name="hint_business_license_picture">营业执照图片</string>
    <string name="psw_length_error">必须为6-20位字母数字组合 </string>
    <string name="find_pay_word">设置支付密码 </string>
    <string name="pay_word_length_must_six">支付密码长度必须为6位数字 </string>
    <string name="updata_success">修改成功 </string>
    <string name="agree_xieyi">请先同意注册协议 </string>
    <string name="select_class">选择分类 </string>
    <string name="onsale">在售 </string>
    <string name="sold_out">下架 </string>
    <string name="hint_goods_des">请用一句话描述次商品</string>
    <string name="hint_goods_stock_count">请输入数量(单位：件)</string>
    <string name="hint_goods_price">请输入价格(单位：元) </string>
    <string name="hint_goods_name">25个字符以内</string>
    <string name="hint_goods_code">扫描商品条形码</string>
    <string name="scan">扫描</string>
    <string name="format_class_count">%1$s(%2$s)</string>
    <string name="select_category">选择分类</string>
    <string name="mei_fen">/份</string>
    <string name="sales_volume">销量: </string>
    <string name="set_success">设置成功</string>
    <string name="photograph">拍照</string>
    <string name="from_phone_choice">从手机相册选择</string>
    <string name="please_input_shop_phone">请输入店铺电话</string>
    <string name="shop_tel_input_tips">手机号（13800000000）、固定电话（07552300509）\n400电话（4001111111）、800电话（8002222222）</string>
    <string name="shop_tel_style_tips_with_colon">电话格式请参考:</string>
</resources>