<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/head_operation" />

    <LinearLayout style="@style/select_bar_ll" 
        android:id="@+id/ll_app_versions_des"
        
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/app_version_descripe" />

        <ImageView style="@style/arrow_right_gray" />
    </LinearLayout>

    <View style="@style/cutline_fine" />

    <LinearLayout style="@style/select_bar_ll"   android:id="@+id/ll_about_us" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/about_wangwang_life" />

        <ImageView style="@style/arrow_right_gray" />
    </LinearLayout>

    <View style="@style/cutline_fine" />

    <LinearLayout style="@style/select_bar_ll" android:id="@+id/ll_contact_us"  >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/contact_us" />

        <ImageView style="@style/arrow_right_gray" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_exit" 
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="40dp"
        android:background="@color/yellow_ww"
        android:gravity="center"
        android:text="@string/exit_login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_xlarge_size" />

</LinearLayout>