<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@color/transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_takephoto"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:background="@drawable/bg_white_shape"
        android:textColor="@color/yellow_ww"
        android:textSize="@dimen/text_large_size"
        android:text="@string/photograph" />


    <TextView
        android:id="@+id/tv_choose"
         android:layout_height="35dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="1dp"
        android:background="@drawable/bg_white_shape"
        android:textColor="@color/yellow_ww"
        android:textSize="@dimen/text_large_size"
        android:text="@string/from_phone_choice" />

    <TextView
        android:id="@+id/cancel"
        android:layout_height="35dp"
        android:gravity="center"
             android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_white_shape"
        android:textColor="@color/text_gray_s"
        android:textSize="@dimen/text_large_size"
        android:text="@string/cancel" />

</LinearLayout>
